--- a/package.json
+++ b/package.json
@@ -18,36 +18,42 @@
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.5",
-    "@react-navigation/native": "^7.1.18",
-    "expo": "~54.0.13",
+    "@react-navigation/native": "^7.1.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "expo": "~54.0.26",
     "expo-auth-session": "~7.0.9",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
+    "expo-gl": "~16.0.8",
+    "expo-gl-cpp": "^11.4.0",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.11",
+    "expo-router": "~6.0.16",
     "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gradients": "^2.1.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
