--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@firebase/webchannel-wrapper": "^1.0.5",
     "@jamsch/expo-speech-recognition": "^0.2.15",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "expo": "^54.0.27",
     "expo-asset": "^12.0.11",
     "expo-av": "~16.0.8",
