--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-google-signin/google-signin": "^16.1.1",
+    "base-64": "^1.0.0",
     "expo": "^54.0.27",
     "expo-asset": "^12.0.11",
     "expo-av": "~16.0.8",
