--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# WooCommerce API
-EXPO_PUBLIC_WOO_CONSUMER_KEY=your_ck_here
-EXPO_PUBLIC_WOO_CONSUMER_SECRET=your_cs_here
-
 # EmailJS Configuration
 EXPO_PUBLIC_EMAILJS_SERVICE_ID=your_service_id_here
 EXPO_PUBLIC_EMAILJS_TEMPLATE_ID=your_template_id_here
 EXPO_PUBLIC_EMAILJS_PUBLIC_KEY=your_public_key_here
+
+# Firebase Configuration
+EXPO_PUBLIC_FIREBASE_API_KEY=your_api_key_here
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
+EXPO_PUBLIC_FIREBASE_APP_ID=your_app_id
+EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
