--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-google-signin/google-signin": "^16.1.1",
+    "@shopify/flash-list": "^2.2.0",
+    "@tanstack/react-query": "^5.90.19",
+    "axios": "^1.13.2",
     "base-64": "^1.0.0",
     "expo": "^54.0.27",
     "expo-asset": "^12.0.11",
